Refactoring all files to adhere to a stricter code style. Replacing all Collectors to List with simple To list. Improving the quality of the UI to be less Buggy. Still a mess tho. TODO further improve my linter, I disagree with some Linter messages it is throwing.
DL:N  Hi Nick if u see this, I wanted to improve this for a bit since I felt like revisiting this for a bit to see if I can fix the issues.